--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ server.port=8888
 # MONGODB (MongoProperties)
 #spring.data.mongodb.uri=mongodb://localhost:27017/EmployeeDB
 #Docker Mogodb Running on Docker ip:192.168.99.100 port:27017 database: EmployeeDB
-spring.data.mongodb.uri=mongodb://192.168.99.100:27017/EmployeeDB
+#spring.data.mongodb.uri=mongodb://192.168.99.100:27017/EmployeeDB
+#spring.data.mongodb.uri=mongodb://localhost:27017/EmployeeDB
+#For Docker-compose as configured
+spring.data.mongodb.uri=mongodb://mymongo:27017/EmployeeDB
